aws-infra/helm/ingress-nginx-alb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-alb-ingress-controller
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: alb_certificate_arns
    alb.ingress.kubernetes.io/load-balancer-name: "alb-ingress-nginx-controller"
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-TLS13-1-2-2021-06"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ingress-nginx-controller
                port:
                  number: 80
            path: /
            pathType: Prefix
